--- a/wizard/mining_analyzer_hourmeter.xml
+++ b/wizard/mining_analyzer_hourmeter.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="mining_analyzer_ritase_form_view" model="ir.ui.view">
-            <field name="name">sr.mining.analyzer.ritase.form.view</field>
-            <field name="model">mining.analyzer.ritase</field>
+        <record id="mining_analyzer_hourmeter_form_view" model="ir.ui.view">
+            <field name="name">sr.mining.analyzer.hourmeter.form.view</field>
+            <field name="model">mining.analyzer.hourmeter</field>
             <field name="arch" type="xml">
-                <form string="Ritase Analizer">
+                <form string="Hourmeter Analizer">
                     <group>
                         <p>
                             Analyze your data to find input fault or anomaly
@@ -30,17 +30,17 @@
             </field>
         </record>
 
-        <record id="action_mining_analyzer_ritase_wizard" model="ir.actions.act_window">
-            <field name="name">Ritase Analizer</field>
-            <field name="res_model">mining.analyzer.ritase</field>
+        <record id="action_mining_analyzer_hourmeter_wizard" model="ir.actions.act_window">
+            <field name="name">Hourmeter Analizer</field>
+            <field name="res_model">mining.analyzer.hourmeter</field>
             <field name="view_type">form</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
 
-        <menuitem id="menu_mining_analyzer_ritase_wizard"
-                  name="Ritase Analizer"
-                  action="action_mining_analyzer_ritase_wizard"
+        <menuitem id="menu_mining_analyzer_hourmeter_wizard"
+                  name="Hourmeter Analizer"
+                  action="action_mining_analyzer_hourmeter_wizard"
                   parent="menu_mining_analyzer"
                   sequence="2"/>
     </data>
