--- a/views/menu.xml
+++ b/views/menu.xml
@@ -2,6 +2,8 @@
 <odoo>
 
     <menuitem id="menu_qaqc_analyzer" name="Analyzer" sequence="99" 
-			parent="mining_qaqc.qaqc_top"/>
+			parent="mining_qaqc.qaqc_top"
+            groups="mining_qaqc.qaqc_group_manager"
+            />
     
 </odoo>
